--- a/cube/index.css
+++ b/cube/index.css
@@ -1,4 +1,3 @@
-
 html {
   user-select: none;
   touch-action: none;
@@ -21,7 +20,7 @@ html {
 }
 
 body {
-  background-color: #8967AA; /* rebeccapurple; */
+  background-color: #8967aa; /* rebeccapurple; */
   height: 100vh;
   width: 100vw;
   margin: 0;
@@ -38,7 +37,8 @@ aside.menu {
   width: 40%;
 }
 
-.healthBar, .staminaBar {
+.healthBar,
+.staminaBar {
   position: absolute;
   top: 0;
   width: calc(var(--tileSizePx) / 2 * 5px);
@@ -229,7 +229,8 @@ text.moji {
   height: calc(var(--tileSizePx) * 1px);
   line-height: calc(var(--tileSizePx) * 1px);
   /* https://css-tricks.com/snippets/css/font-stacks/ */
-  font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
+  font-family: 'Segoe UI', Candara, 'Bitstream Vera Sans', 'DejaVu Sans',
+    'Bitstream Vera Sans', 'Trebuchet MS', Verdana, 'Verdana Ref', sans-serif;
   font-size: calc(var(--tileSizePx) * 0.7px);
   margin: 0;
 }
