--- a/cube/index.css
+++ b/cube/index.css
@@ -1,4 +1,7 @@
 html {
+  /* font-family: Candara, Helvetica, San Francisco, Arial, sans-serif; */
+  font-family: font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
+
   user-select: none;
   touch-action: none;
   box-sizing: border-box;
@@ -206,7 +209,9 @@ text.moji {
   top: calc(var(--tileSizePx) * 0.5px);
   left: 0;
   right: 0;
-  text-align: center;
+  text-align: left;
+  padding-left: 1.6em;
+  text-indent: -1.4em;
 }
 
 .menu {
