[cube] dialog typography

--- a/cube/index.css
+++ b/cube/index.css
@@ -1,6 +1,5 @@
 html {
-  /* font-family: Candara, Helvetica, San Francisco, Arial, sans-serif; */
-  font-family: font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
+  font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
 
   user-select: none;
   touch-action: none;
