--- a/cube/index.css
+++ b/cube/index.css
@@ -8,8 +8,8 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 
-  height: 100vh;
-  width: 100vw;
+  height: 100dvh;
+  width: 100dvw;
 }
 
 *,
@@ -22,8 +22,8 @@ html {
 
 body {
   background-color: #8967aa; /* rebeccapurple; */
-  height: 100vh;
-  width: 100vw;
+  height: 100dvh;
+  width: 100dvw;
   margin: 0;
 
   overflow-y: auto;
