--- a/cube/index.css
+++ b/cube/index.css
@@ -282,6 +282,17 @@ select {
   align-items: center;
 }
 
+.input {
+  font-size: calc(var(--tileSizePx) * 0.8px);
+  height: calc(var(--tileSizePx) * 1px);
+  border-radius: calc(var(--tileSizePx) * 0.5px);
+  border: solid 4px rgba(0, 0, 0, 25%);
+  padding-left: calc(var(--tileSizePx) * 0.5px);
+  padding-right: calc(var(--tileSizePx) * 0.5px);
+  background-color: rgba(0, 0, 0, 12.5%);
+  max-width: 90%;
+}
+
 .choice {
   position: relative;
   display: block;
