[cube] disable number input styles

--- a/cube/index.css
+++ b/cube/index.css
@@ -293,6 +293,10 @@ select {
   max-width: 90%;
 }
 
+input[type='number']::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
 .choice {
   position: relative;
   display: block;
