--- a/cube/index.css
+++ b/cube/index.css
@@ -3,19 +3,26 @@ html {
     Georgia, serif;
 
   user-select: none;
-  touch-action: none;
+  -webkit-user-select: none;
+
   box-sizing: border-box;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 
   height: 100dvh;
   width: 100dvw;
+  overflow: hidden;
 }
 
 *,
 ::before,
 ::after {
   user-select: none;
+  -webkit-user-select: none;
+
+  touch-action: manipulation;
+  -webkit-touch-action: manipulation;
+
   margin: 0;
   box-sizing: inherit;
 }
