--- a/cube/index.css
+++ b/cube/index.css
@@ -281,6 +281,22 @@ select {
   margin: 0;
 }
 
+.cancel {
+  position: fixed;
+
+  top: 0;
+  right: 0;
+
+  font-size: calc(var(--tileSizePx) * 0.6px);
+  text-align: center;
+
+  padding: 10px;
+  margin: 10px;
+
+  height: calc(var(--tileSizePx) * 1px);
+  width: calc(var(--tileSizePx) * 1px);
+}
+
 .menu {
   position: absolute;
   min-height: 100%;
@@ -295,7 +311,7 @@ select {
 }
 
 .input[type='text'],
-.input[type=''] {
+.input[type='number'] {
   font-size: calc(var(--tileSizePx) * 0.8px);
   height: calc(var(--tileSizePx) * 1px);
   border-radius: calc(var(--tileSizePx) * 0.5px);
